<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.europeana.metis</groupId>
    <artifactId>metis-reprocessing</artifactId>
    <version>1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven.compiler.plugin}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>eu.europeana.metis.reprocessing.ReprocessingMain</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.maven.compiler.plugin>3.13.0</version.maven.compiler.plugin>
        <version.metis-schema>11-SNAPSHOT</version.metis-schema>
        <version.metis>15-SNAPSHOT</version.metis>
        <version.metis-core>15-SNAPSHOT</version.metis-core>
        <version.metis-normalization>15-SNAPSHOT</version.metis-normalization>
        <version.corelib>2.16.10-SNAPSHOT</version.corelib>
        <version.entity-api-client>2.1.1-SNAPSHOT</version.entity-api-client>
        <version.spring-web>6.1.4</version.spring-web>
        <version.spring-webflux>6.1.4</version.spring-webflux>
        <version.reactor-core>3.6.3</version.reactor-core>
        <version.reactor-netty-http>1.1.23</version.reactor-netty-http>
        <!-- These two versions are interdependent. -->
        <version.slf4j>2.0.12</version.slf4j>
        <version.log4j>2.23.0</version.log4j>
    </properties>

    <dependencies>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-schema</artifactId>
            <version>${version.metis-schema}</version>
        </dependency>
        <dependency>
            <artifactId>metis-core-common</artifactId>
            <groupId>eu.europeana.metis</groupId>
            <version>${version.metis-core}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-autoconfigure</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-normalization</artifactId>
            <version>${version.metis-normalization}</version>
        </dependency>

        <dependency>
            <artifactId>metis-core-service</artifactId>
            <groupId>eu.europeana.metis</groupId>
            <version>${version.metis-core}</version>
            <exclusions>
                <!--Exclude those because of eu.europeana.api:entity-api-client:jar:0.0.1-SNAPSHOT transitive of metis-enrichment-client-->
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.logging</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <artifactId>metis-media-service</artifactId>
            <groupId>eu.europeana.metis</groupId>
            <version>${version.metis}</version>
        </dependency>

        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-indexing</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-enrichment-client</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.maven.surefire</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>org.springframework</artifactId>
                    <groupId>*</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>org.springframework.security</artifactId>
                    <groupId>*</groupId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.module</groupId>
                    <artifactId>jackson-module-jaxb-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-webflux</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.projectreactor.netty</groupId>
                    <artifactId>reactor-netty-http</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-web</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>eu.europeana.api</groupId>
                    <artifactId>entity-api-client</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.api</groupId>
            <artifactId>entity-api-client</artifactId>
            <version>${version.entity-api-client}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${version.spring-web}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webflux</artifactId>
            <version>${version.spring-webflux}</version>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>${version.reactor-core}</version>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty-http</artifactId>
            <version>${version.reactor-netty-http}</version>
        </dependency>
        <!--Logging-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j}</version>
        </dependency>
        <!-- Binding for Log4J -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${version.log4j}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Log4j API and Core implementation required for binding -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${version.log4j}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${version.log4j}</version>
        </dependency>
    </dependencies>

    <repositories>
        <!--Release repositories-->
        <repository>
            <id>libs-release</id>
            <name>libs-release</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>libs-snapshot</id>
            <name>libs-snapshot</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
